# cloudabi

./: .gitignore  AUTHORS  LICENSE  README.md  WORKSPACE  cloudabi.txt  generate.py  generate_c_header.py  generate_c_headers.py  generate_markdown.py  generate_syscalls_master.py  parse.py  reformat.sh  test.sh
docs/: cloudabi-rust.html  cloudabi-rust.md  cloudabi.html  cloudabi.md
extra/git-hooks/: pre-commit
extra/vim/ftdetect/: abi.vim
extra/vim/ftplugin/: abi.vim
extra/vim/syntax/: abi.vim
freebsd/: syscalls.master  syscalls32.master  syscalls64.master
generator/: abi.py  asm.py  c.py  c_naming.py  format.py  generator.py  go.py  go_naming.py  itf.py  layout.py  markdown.py  markdown_naming.py  parser.py  rust.py  rust_naming.py  syscalls_master.py
go/: cloudabi.go
go/runtime/: syscall_cloudabi.go
headers/: BUILD.bazel  cloudabi32_types.h  cloudabi64_types.h  cloudabi_syscall_names.h  cloudabi_syscall_struct.h  cloudabi_syscalls.h  cloudabi_syscalls_aarch64.h  cloudabi_syscalls_info.h  cloudabi_syscalls_names.h  cloudabi_syscalls_native.h  cloudabi_syscalls_native_aarch64.h  cloudabi_syscalls_native_x86_64.h  cloudabi_syscalls_struct.h  cloudabi_syscalls_x86_64.h  cloudabi_types.h  cloudabi_types_common.h
linux/: cloudabi64_syscalls.c  cloudabi64_syscalls.h  cloudabi64_syscalls_table.h  cloudabi_syscalls.h
parts/: head  head.html
rust/: Cargo.toml  bitflags.rs  cloudabi-types.rs  cloudabi.rs
sources/: cloudabi_vdso_aarch64.c  cloudabi_vdso_i686.S  cloudabi_vdso_i686_on_x86_64.c  cloudabi_vdso_x86_64.S  cloudabi_vdso_x86_64.c
src/: abi.py  generator.py  itf.py  layout.py  parser.py
src/generators/: c.py  markdown.py  syscalls_master.py
vdsos/: cloudabi_vdso_aarch64.S  cloudabi_vdso_armv6.S  cloudabi_vdso_armv6_on_64bit.S  cloudabi_vdso_i686.S  cloudabi_vdso_i686_on_64bit.S  cloudabi_vdso_x86_64.S
