[package]
name = "cloudabi"
description = "Low level interface to CloudABI. Contains all syscalls and related types."
version = "0.1.0"
homepage = "https://cloudabi.org/"
repository = "https://github.com/nuxinl/cloudabi"
documentation = "https://docs.rs/cloudabi/"
keywords = ["cloudabi"]
authors = ["Nuxi (https://nuxi.nl/) and contributors"]
license = "BSD-2-Clause"
edition = "2018"

[lib]
path = "cloudabi.rs"

[features]
default = ["bitflags"]

[dependencies]
bitflags = { version = "1.2.1", optional = true }
